# chessIQ

./: .gitignore  DOC.md  HOW_IT_WORKS.md  README.md  supabase_schema.sql
backend/: CMakeLists.txt
backend/include/: board.h  game.h  hash.h  queue.h  stack.h
backend/src/: board.cpp  game.cpp  main.cpp
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/chess/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/play/: page.tsx
frontend/src/components/: ChessBoard.tsx
